cmake_minimum_required(VERSION 3.5)

#========================================================================
project(fake6502 LANGUAGES C)
set ( target ${PROJECT_NAME} )

#========================================================================
add_library( ${target} OBJECT
        fake6502.c
        fake6502.h
    )

#========================================================================
target_include_directories( ${target} PUBLIC ${CMAKE_CURRENT_LIST_DIR} )

#========================================================================
target_compile_definitions( ${target} PUBLIC -DNMOS6502 )

#========================================================================
# End of file.
#========================================================================
